@@ -587,6 +587,7 @@ Vladimir Kushnir
 Ross Lagerwall
 Cameron Laird
 Jean-Baptiste "Jiba" Lamy
+Ronan Lamy
 Torsten Landschoff
 Łukasz Langa
 Tino Lange
